--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "auto": "webpack serve"
+    "auto": "webpack serve",
+    "build": "webpack",
+    "prevDist": "node prevDist"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,11 @@
     "@babel/preset-react": "^7.22.3",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "dotenv-webpack": "^8.0.1",
+    "fs-extra": "^11.1.1",
+    "html-webpack-harddisk-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
