--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
+    "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
     "fs-extra": "^11.1.1",
     "html-webpack-harddisk-plugin": "^2.0.0",
